--- a/package.json
+++ b/package.json
@@ -1,14 +1,17 @@
 {
   "dependencies": {
     "express": "^5.1.0",
+    "next": "^15.5.0",
+    "react": "^19.1.1",
+    "react-dom": "^19.1.1",
     "serverless-http": "^3.2.0"
   },
   "devDependencies": {
     "@netlify/plugin-nextjs": "^5.12.0"
   },
   "scripts": {
-    "dev":"next dev",
-    "build" : "next build",
-    "start" : "next start"
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start"
   }
 }
