--- a/package.json
+++ b/package.json
@@ -1,8 +1,10 @@
 {
   "dependencies": {
     "cors": "^2.8.5",
+    "csv-parser": "^3.2.0",
     "express": "^5.1.0",
     "file-saver": "^2.0.5",
+    "json2csv": "^6.0.0-alpha.2",
     "multer": "^2.0.2",
     "next": "^15.5.0",
     "react": "^19.1.1",
